backup-service.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: backup-service
  namespace: muxiu1997-dot-com
subsets:
  - addresses:
      - ip: 10.97.1.11
    ports:
      - port: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: backup-service
  namespace: muxiu1997-dot-com
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
